--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <div class="profile">
     <h1>About Me</h1>
-    <img src="C:\Users\ELCOT\Pictures\dhivya.jpg" alt="Profile Picture">
+    <img src="dhivya.jpg" alt="Profile Picture">
     <p><strong>Name:</strong>Dhivya.N</p>
     <p><strong>Age:</strong>20</p>
      <p><strong>College:</strong>Government Arts college(A)</p>
